# SO2-monkey-cooks

./: CMakeLists.txt  README.md  main.cpp
include/: MonkeDisplay.hpp  main.hpp
include/core/: Kitchen.hpp  Monke.hpp  MonkeUtility.hpp  Recipe.hpp
resources/: kitchenitems  recipes
src/: CMakeLists.txt  Kitchen.cpp  Monke.cpp  MonkeDisplay.cpp  MonkeUtility.cpp
